--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /var/www/html;
-    index index.php;
+    index index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
